[gd_scene load_steps=6 format=3 uid="uid://drgemr0hcy3e7"]

[ext_resource type="Texture2D" uid="uid://mbi8sytfyqki" path="res://Textures/bumper.png" id="1_a6rjy"]
[ext_resource type="Script" path="res://Scripts/bumper.gd" id="1_n3hwx"]
[ext_resource type="Texture2D" uid="uid://doxnw8vkcqiag" path="res://Textures/debug_vector.png" id="2_n01su"]

[sub_resource type="CircleShape2D" id="CircleShape2D_egy1d"]
radius = 26.0768

[sub_resource type="CircleShape2D" id="CircleShape2D_mw2ub"]
radius = 17.0

[node name="bumper" type="Area2D"]
collision_layer = 2
script = ExtResource("1_n3hwx")

[node name="DebugVector" type="Sprite2D" parent="."]
texture = ExtResource("2_n01su")
offset = Vector2(0, -32)

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_a6rjy")

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_egy1d")

[node name="stop" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="coll" type="CollisionShape2D" parent="stop"]
shape = SubResource("CircleShape2D_mw2ub")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
